# Glug

./: .gitignore  .travis.yml  LICENSE  README.md  glug.cabal  stack.yaml
app/: CLI.hs  Main.hs
app/API/: CacheMaintenance.hs  Helpers.hs  Main.hs
src/: Downloader.hs  Glug.hs  SrtExtract.hs  SubsceneDownloader.hs  TMDbDownloader.hs  WordCounter.hs  WordHeuristics.hs  WordTrie.hs
src/Glug/: Cache.hs  CommonWords.hs  Constants.hs  Monad.hs  Net.hs  SrtExtract.hs  SubsceneDownloader.hs  TMDbDownloader.hs  Types.hs  WordCounter.hs  WordHeuristics.hs  WordTrie.hs
test/: CacheSpec.hs  CommonWordsSpec.hs  SrtExtractSpec.hs  WordCounterSpec.hs  WordHeuristicsSpec.hs  WordTrieSpec.hs
