name:                glug
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/glug#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SrtExtract
                     , WordCounter
                     , WordTrie
                     , WordHeuristics
                     , Downloader
  build-depends:       attoparsec
                     , base           >= 4.7 && < 5
                     , binary         >= 0.7
                     , bytestring     >= 0.10.6 && < 0.11
                     , edit-distance  >= 0.2.2 && < 0.3
                     , HTTP           >= 4000.3.3 && < 4001
                     , mtl            >= 2.2.1 && < 2.3
                     , network-uri    >= 2.6 && <2.7
                     , subtitleParser >= 0.5 && < 0.6
                     , tagsoup        >= 0.13 && < 0.14
                     , text           >= 1.2.2 && < 1.3
                     , time           >= 1.5 && <1.6
                     , zip-archive    >= 0.2.3 && <= 0.3
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror

executable glug-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glug
                     , transformers   >= 0.4.2 && < 0.5
                     , subtitleParser >= 0.5 && < 0.6
                     , text           >= 1.2.2 && < 1.3
  default-language:    Haskell2010

test-suite glug-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base64-bytestring >=1.0.0.1 && <1.1
                     , bytestring     >= 0.10.6 && < 0.11
                     , glug
                     , hspec >= 2.2.2 && < 2.3
                     , subtitleParser >= 0.5 && < 0.6
                     , time           >= 1.5 && <1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/glug
