name:                glug
version:             0.1.0.0
synopsis:            movie word analyzer
description:         Please see README.md
homepage:            http://github.com/robmcl4/Glug#readme
license:             BSD3
license-file:        LICENSE
author:              Robert McLaughlin
maintainer:          example@example.com
copyright:           2016 Robert McLaughlin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Glug
                     , Glug.Cache
                     , Glug.Monad
                     , Glug.SrtExtract
                     , Glug.SubsceneDownloader
                     , Glug.TMDbDownloader
                     , Glug.Types
                     , Glug.WordCounter
                     , Glug.WordTrie
                     , Glug.WordHeuristics
  other-modules:       Glug.Constants
                     , Paths_glug
  build-depends:       aeson                >= 1.0 && < 1.1
                     , attoparsec
                     , base                 >= 4.7 && < 5
                     , binary               >= 0.7
                     , bytestring           >= 0.10.6 && < 0.11
                     , edit-distance        >= 0.2.2 && < 0.3
                     , HTTP                 >= 4000.3.3 && < 4001
                     , http-conduit         >= 2.2 && < 2.3
                     , lrucache             >= 1.2 && < 1.3
                     , mtl                  >= 2.2.1 && < 2.3
                     , subtitleParser       >= 0.5 && < 0.6
                     , tagsoup              >= 0.14 && < 0.15
                     , text                 >= 1.2.2 && < 1.3
                     , time                 >= 1.6 && <1.7
                     , transformers         >= 0.5 && < 0.6
                     , unordered-containers >= 0.2.5 && < 0.3
                     , vector               >= 0.11.0 && < 0.12
                     , zip-archive          >= 0.3 && <= 0.4
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -O

executable glug-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       API.Helpers
                     , API.Main
                     , CLI
  build-depends:       aeson          >= 1.0 && < 1.1
                     , base
                     , bytestring     >= 0.10.6 && < 0.11
                     , base64-bytestring >=1.0 && <1.1
                     , glug
                     , http-types
                     , lrucache       >= 1.2 && < 1.3
                     , transformers   >= 0.5 && < 0.6
                     , subtitleParser >= 0.5 && < 0.6
                     , text           >= 1.2.2 && < 1.3
                     , time           >= 1.6 && <1.7
                     , wai
                     , warp           >= 3.2.2 && < 3.3
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -O

test-suite glug-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base64-bytestring >=1.0.0.1 && <1.1
                     , bytestring        >= 0.10.6 && < 0.11
                     , glug
                     , hspec             >= 2.4 && < 2.5
                     , lrucache             >= 1.2 && < 1.3
                     , subtitleParser    >= 0.5 && < 0.6
                     , time              >= 1.6 && <1.7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robmcl4/glug
